pricing card css mini-project/styles.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  line-height: 1.6;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-color: #27264b;
  color: #433f63;
}

a {
  text-decoration: none;
  color: #007bff;
}

ul {
  list-style: none;
}

li {
  margin-bottom: 10px;
}

.cards-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  gap: 30px;
  padding: 3rem;
  background-color: #f8fafe;
  max-width: 1100px;
  min-height: 60vh;
  border-radius: 10px;
}

/* Card */

.card {
  flex: 1;
  min-width: 250px;
  height: 600px;
  background-color: #fff;
  border-radius: 8px;
  padding: 20px;
  margin-bottom: 20px;
  text-align: center;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.card h2 {
  font-size: 18px;
  text-transform: uppercase;
  margin-bottom: 10px;
  padding: 15px;
  color: #333;
  background: #f8fafe;
}

.card-pro h2 {
  background: linear-gradient(
    90deg,
    rgba(194, 227, 255, 1) 13%,
    rgba(180, 118, 254, 1) 100%
  );
  color: #fff;
}

.card-enterprise h2 {
  background: linear-gradient(
    90deg,
    rgba(255, 177, 194, 1) 13%,
    rgba(255, 203, 114, 1) 100%
  );
  color: #fff;
}

/* Price */

.card .price {
  font-size: 45px;
  font-weight: 700;
  margin-bottom: 20px;
}

.card .price sup {
  font-size: 18px;
  position: relative;
  left: -5px;
}

.card .price span {
  font-size: 18px;
  margin-left: 5px;
}

.card .main-text {
  font-size: 14px;
  margin-bottom: 50px;
}

/* Buttons */

.btn {
  display: block;
  background-color: #fff;
  color: #27264b;
  border: 1px solid #27264b;
  border-radius: 5px;
  padding: 15px;
  width: 100%;
  cursor: pointer;
  font-size: 16px;
}

.btn-primary,
.btn:hover {
  background-color: #27264b;
  color: #fff;
}

.btn-primary:hover {
  background-color: #fff;
  color: #27264b;
}

/* List */

.card ul {
  text-align: left;
  margin-top: 50px;
}

.card ul li i {
  color: #98ca9e;
  margin-right: 10px;
}

